# image-search

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  sample.env
.github/workflows/: codeql.yml  main.yml
src/: config.py  main.py  webscraper_config.json
src/app/: models.py  routes.py  utils.py
src/database/: sql_models.py  vector_models.py
src/etl/: extract.py  load.py  product.py  scraper.py
tests/: test_app.py
